syntax = "proto3";

package rivet.backend.pkg.mm.lobby_runtime_aggregate;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid namespace_ids = 1;
	int64 query_start = 2;
	int64 query_end = 3;
}

message Response {
	message RegionTierTime {
		rivet.common.Uuid namespace_id = 1;
		rivet.common.Uuid region_id = 2;
		string tier_name_id = 3;
		// Use the name ID instead of the UUID since we want to combine the same
		// expenses across multiple lobby groups
		string lobby_group_name_id = 5;
		int64 total_time = 4; // in milliseconds
	}

	repeated RegionTierTime region_tier_times = 1;
}
